[package]
name = "dissectionqr"
version = "0.1.0"
authors = ["Reid Atcheson <reid.atcheson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits="0.2"
ndarray = "0.14.0"
lapack = "0.16.0"
#blas = "0.21.0"
#num-complex="0.3" currently limited by BLAS which uses lower version
blas = "0.20.0"
openblas-src = "0.10.2"

